# uguitar-python

./: .gitignore  README.md
cpp-wrapper/: CMakeLists.txt  example.cpp  ug_cpp.cpp  ug_cpp.h
test/: __init__.py  content.py  get_url.py
uguitar/: content_holder.py  http_curl.py  tab_descriptor.py  ug_parser.py  ug_request.py  ug_simplesearch.py
